Dockerfile added for 'pagination'

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -21,7 +21,7 @@
 			</div>
 		</section>
 
-		<table class="table table is-striped loader" id="table">
+		<table class="table is-striped loader" id="table">
 			<thead class="thead">
 				<tr>
 					<th>ID</th>
